Revert "nuke font changes off css sheet"
This reverts commit 3e4361db3112a335edbe96b4d0d141ceb4e90c39.

--- a/src/qt/res/css/default.css
+++ b/src/qt/res/css/default.css
@@ -44,6 +44,7 @@ QToolBar > QToolButton {
 	padding: 0em 2em;
 	min-height: 3em;
 	padding: 0em 3.566668em;
+	font-size: 12px;
 	color: #fff
 }
 QToolBar > QToolButton:checked {
@@ -109,6 +110,7 @@ QToolTip {
 	color: #333
 }
 QLabel {
+	font-size: 12px;
 	color: #333333
 }
 .QRadioButton {
@@ -120,6 +122,7 @@ QLabel {
 .QCheckBox:hover {} .QValidatedLineEdit,
 .QLineEdit,
 .QTextEdit {
+	font-size: 12px;
 	min-height: 25px;
 	outline: 0;
 	padding: 3px;
@@ -155,6 +158,8 @@ QPushButton {
 	border-color: #5787bb;
 	border-radius: 2px;
 	color: #ffffff;
+	font-size: 12px;
+	font-weight: 700;
 	padding-left: 25px;
 	padding-right: 25px;
 	padding-top: 1px;
@@ -238,6 +243,7 @@ QComboBox::indicator {
 QAbstractSpinBox {
 	padding: 3px 5px 3px 5px;
 	background: #fcfcfc;
+	font-size: 12px;
 	min-height: 25px;
 	outline: 0;
 	padding: 3px;
@@ -276,6 +282,7 @@ QAbstractSpinBox::down-arrow {
 QValueComboBox {
 	padding: 3px 5px 3px 5px;
 	background: #fcfcfc;
+	font-size: 12px;
 	min-height: 25px;
 	outline: 0;
 	padding: 3px;
@@ -296,6 +303,8 @@ QHeaderView::section {
 	background-color: #5787bb;
 	color: #fff;
 	min-height: 25px;
+	font-weight: 700;
+	font-size: 11px;
 	border: 0;
 	border-right: 1px solid #fff;
 	padding-left: 5px;
@@ -326,6 +335,7 @@ QDialog#MultiSendDialog QScrollArea{
 }
 QTableView::item {
 	background-color: #fcfcfc;
+	font-size: 12px
 }
 QTableView::item:selected {
 	background-color: #5787bb;
@@ -508,6 +518,9 @@ QDialog .QTabWidget .QWidget QAbstractSpinBox::up-button {
 QDialog .QTabWidget .QWidget QComboBox {
 	min-height: 15px
 }
+QDialog#OpenURIDialog QLabel#label {
+	font-weight: 700
+}
 QDialog#OpenURIDialog QPushButton#selectFileButton {
 	background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: .01 #f6f6f6, stop: .1 rgba(250, 250, 250, 128), stop: .95 rgba(250, 250, 250, 255), stop: 1 #ebebeb);
 	border: 1px solid #d2d2d2;
@@ -525,6 +538,9 @@ QDialog#OpenURIDialog QPushButton#selectFileButton:pressed {
 QWidget#AddressBookPage {
 	background-color: #fafefd
 }
+QWidget#AddressBookPage QTableView {
+	font-size: 12px
+}
 QWidget#AddressBookPage QHeaderView::section {
 	min-width: 260px
 }
@@ -536,6 +552,8 @@ QFrame#frameObfuscation QFormLayout#obfuscationStatusLayout QLabel {
 	border: 0px solid #000
 }
 QFrame#frameObfuscation QPushButton {
+	font-size: 12px;
+	font-weight: 400;
 	padding-left: 5px;
 	padding-right: 5px;
 	padding-top: 1px;
@@ -597,6 +615,9 @@ QDialog#OptionsDialog QCheckBox {
 QDialog#OptionsDialog QCheckBox#displayAddresses {
 	min-height: 33px
 }
+QDialog#OptionsDialog QLabel#labelStakeSplitThresholdText {
+	font-size: 16px
+}
 QDialog#RPCConsole QWidget#tab_info QLabel#label_11,
 QDialog#RPCConsole QWidget#tab_info QLabel#label_10 {
 	qproperty-alignment: 'AlignBottom';
@@ -649,12 +670,15 @@ QDialog#AboutDialog QLabel#label_2 {
 QDialog#EditAddressDialog QLabel {
 	qproperty-alignment: 'AlignVCenter | AlignRight';
 	min-height: 27px;
+	font-weight: 400;
 	padding-right: 5px
 }
 QFrame[frameShape="4"] {
 	border: 1px solid #4c75a1
 }
 QLabel#labelOverviewHeaderLeft {
+	font-weight: 700;
+	font-size: 20px;
 	background-color: #ffffff
 }
 QLabel#labelOverviewHeaderRight {
@@ -696,7 +720,9 @@ QWidget .QFrame#frame_Balances > .QLabel {
 QWidget .QFrame#frame_Balances .QLabel#BalanceTitle {
 	qproperty-alignment: 'AlignVCenter | AlignLeft';
 	min-width: 160px;
-	background-color: transparent
+	background-color: transparent;
+	font-weight: 700;
+	font-size: 15px;
 }
 QWidget .QFrame#frame_Balances .QLabel#labelWalletStatus {
 	qproperty-alignment: 'AlignVCenter | AlignLeft';
@@ -704,62 +730,80 @@ QWidget .QFrame#frame_Balances .QLabel#labelWalletStatus {
 }
 QWidget .QFrame#frame_Balances .QLabel#labelSpendable {
 	qproperty-alignment: 'AlignVCenter | AlignLeft';
+	font-size: 12px;
 	margin-left: 18px
 }
 QWidget .QFrame#frame_Balances .QLabel#labelWatchonly {
 	qproperty-alignment: 'AlignVCenter | AlignLeft';
+	font-size: 12px;
 	margin-left: 16px
 }
 QWidget .QFrame#frame_Balances .QLabel#labelBalanceText {
 	qproperty-alignment: 'AlignVCenter | AlignLeft';
 	margin-right: 5px;
-	padding-right: 5px
+	padding-right: 5px;
+	font-size: 15px
 }
 QWidget .QFrame#frame_Balances .QLabel#labelBalance {
 	qproperty-alignment: 'AlignVCenter | AlignLeft';
+	font-size: 12px;
+	font-weight: 700;
 	margin-left: 0px
 }
 QWidget .QFrame#frame_Balances .QLabel#labelWatchAvailable {
 	qproperty-alignment: 'AlignVCenter | AlignLeft';
+	font-size: 12px;
 	margin-left: 16px
 }
 QWidget .QFrame#frame_Balances .QLabel#labelPendingText {
 	qproperty-alignment: 'AlignVCenter | AlignLeft';
 	margin-right: 5px;
-	padding-right: 5px
+	padding-right: 5px;
+	font-size: 15px
 }
 QWidget .QFrame#frame_Balances .QLabel#labelUnconfirmed {
 	qproperty-alignment: 'AlignVCenter | AlignLeft';
+	font-size: 12px;
+	font-weight: 700;
 	margin-left: 0px
 }
 QWidget .QFrame#frame_Balances .QLabel#labelWatchPending {
 	qproperty-alignment: 'AlignVCenter | AlignLeft';
+	font-size: 12px;
 	margin-left: 16px
 }
 QWidget .QFrame#frame_Balances .QLabel#labelImmatureText {
 	qproperty-alignment: 'AlignVCenter | AlignLeft';
 	margin-right: 5px;
-	padding-right: 5px
+	padding-right: 5px;
+	font-size: 15px
 }
 QWidget .QFrame#frame_Balances .QLabel#labelImmature {
 	qproperty-alignment: 'AlignVCenter | AlignLeft';
+	font-size: 12px;
+	font-weight: 700;
 	margin-left: 0px
 }
 QWidget .QFrame#frame_Balances .QLabel#labelWatchImmature {
 	qproperty-alignment: 'AlignVCenter | AlignLeft';
+	font-size: 12px;
 	margin-left: 16px
 }
 QWidget .QFrame#frame_Balances .QLabel#labelTotalText {
 	qproperty-alignment: 'AlignVCenter | AlignLeft';
 	margin-right: 5px;
 	padding-right: 5px;
+	font-size: 15px
 }
 QWidget .QFrame#frame_Balances .QLabel#labelTotal {
 	qproperty-alignment: 'AlignVCenter | AlignLeft';
+	font-size: 12px;
+	font-weight: 700;
 	margin-left: 0px
 }
 QWidget .QFrame#frame_Balances .QLabel#labelWatchTotal {
 	qproperty-alignment: 'AlignVCenter | AlignLeft';
+	font-size: 12px;
 	margin-left: 16px
 }
 QWidget .QFrame#frame_CombinedBalances .QLabel#BalanceTitlez {
@@ -767,6 +811,8 @@ QWidget .QFrame#frame_CombinedBalances .QLabel#BalanceTitlez {
 	min-width: 160px;
 	background-color: transparent;
 	color: #5787bb;
+	font-weight: 700;
+	font-size: 15px;
 	margin-right: 5px;
 	padding-right: 5px
 }
@@ -775,10 +821,14 @@ QWidget .QFrame#frame_CombinedBalances .QLabel#labelBalanceTextz {
 	min-width: 160px;
 	color: #324e6b;
 	margin-right: 5px;
-	padding-right: 5px
+	padding-right: 5px;
+	font-weight: 700;
+	font-size: 12px
 }
 QWidget .QFrame#frame_CombinedBalances .QLabel#labelBalancez {
 	qproperty-alignment: 'AlignVCenter | AlignLeft';
+	font-size: 26px;
+	font-weight: 400;
 	color: #324e6b
 }
 QWidget .QFrame#frame_CombinedBalances .QLabel#labelTotalTextz {
@@ -786,10 +836,14 @@ QWidget .QFrame#frame_CombinedBalances .QLabel#labelTotalTextz {
 	min-width: 160px;
 	color: #324e6b;
 	margin-right: 5px;
-	padding-right: 5px
+	padding-right: 5px;
+	font-weight: 700;
+	font-size: 12px
 }
 QWidget .QFrame#frame_CombinedBalances .QLabel#labelTotalz {
 	qproperty-alignment: 'AlignVCenter | AlignLeft';
+	font-size: 26px;
+	font-weight: 400;
 	color: #324e6b
 }
 QWidget .QFrame#frame_RecentTransactions {
@@ -802,6 +856,8 @@ QWidget .QFrame#frame_RecentTransactions .QLabel#RecentTitle {
 	qproperty-alignment: 'AlignVCenter | AlignLeft';
 	min-width: 180px;
 	background-color: transparent;
+	font-weight: 700;
+	font-size: 15px;
 	margin-right: 5px;
 	padding-right: 5px
 }
@@ -810,6 +866,8 @@ QWidget .QFrame#frame_RecentTransactions .QLabel#labelTransactionsStatus {
 	margin-left: 3px
 }
 QWidget .QFrame#frame_RecentTransactions QListView {
+	font-weight: 400;
+	font-size: 12px;
 	max-width: 369px;
 	margin-top: 12px;
 	margin-left: 0px;
@@ -827,6 +885,9 @@ QDialog#SendCoinsDialog .QFrame#frame_Send {
 	background-color: #ffffff;
 	margin-bottom: 6px
 }
+QDialog#SendCoinsDialog .QFrame#frameCoinControl {} QDialog#SendCoinsDialog .QFrame#frameCoinControl > .QLabel {
+	font-weight: 400
+}
 QDialog#SendCoinsDialog .QFrame#frameCoinControl .QPushButton#pushButtonCoinControl {
 	padding-left: 10px;
 	padding-right: 10px;
@@ -837,23 +898,30 @@ QDialog#SendCoinsDialog .QFrame#frameCoinControl .QLabel#labelCoinControlFeature
 	min-width: 160px;
 	background-color: transparent;
 	color: #5787bb;
+	font-weight: 700;
+	font-size: 14px;
 	margin-right: 5px;
 	padding-right: 5px
 }
 QDialog#SendCoinsDialog .QFrame#frameCoinControl .QWidget#widgetCoinControl {} QDialog#SendCoinsDialog .QFrame#frameCoinControl .QWidget#widgetCoinControl > .QLabel {
 	padding: 2px
 }
+QDialog#SendCoinsDialog .QFrame#frameCoinControl .QLabel#labelCoinControlChangeLabel {
+	font-weight: 400
+}
 QDialog#SendCoinsDialog .QScrollArea#scrollArea .QWidget#scrollAreaWidgetContents {
 	background-color: #ffffff
 }
 QDialog#SendCoinsDialog .QCheckBox#checkUseObfuscation {
 	color: #616161;
+	font-weight: 700;
 	border-radius: 5px;
 	padding-top: 20px;
 	padding-bottom: 18px
 }
 QDialog#SendCoinsDialog .QCheckBox#checkSwiftTX {
 	color: #616161;
+	font-weight: 700;
 	border-radius: 5px;
 	padding-top: 20px;
 	padding-bottom: 18px;
@@ -871,6 +939,7 @@ QDialog#SendCoinsDialog QLabel#labelBalance {
 }
 QStackedWidget#SendCoinsEntry .QFrame#SendCoins > .QLabel {
 	min-width: 10px;
+	font-weight: 700;
 	min-height: 25px;
 	margin-right: 5px;
 	padding-right: 5px
@@ -978,6 +1047,7 @@ QWidget#ReceiveCoinsDialog .QFrame#frame2 {
 }
 QWidget#ReceiveCoinsDialog .QFrame#frame2 > .QLabel {
 	min-width: 10px;
+	font-weight: 700;
 	min-height: 25px;
 	margin-right: 5px;
 	padding-right: 5px
@@ -998,6 +1068,8 @@ QWidget#ReceiveCoinsDialog .QFrame#frame2 QPushButton:pressed {
 }
 QWidget#ReceiveCoinsDialog .QFrame#frame .QLabel#label_6 {
 	color: #5787bb;
+	font-weight: 700;
+	font-size: 14px
 }
 QDialog#ReceiveRequestDialog QTextEdit {
 	border: 1px solid #d7d7d7
@@ -1014,6 +1086,7 @@ TransactionView QComboBox {
 }
 QLabel#transactionSumLabel {
 	color: #333333;
+	font-weight: 700
 }
 QLabel#transactionSum {
 	color: #333333
@@ -1045,7 +1118,8 @@ QCalendarView {
 	border: 1px solid #333
 }
 QCalendarWidget QWidget#qt_calendar_navigationbar {
-	background-color: #5787bb
+	background-color: #5787bb;
+	font-weight: 700
 }
 QCalendarWidget QAbstractItemView {
 	alternate-background-color: #dedbe5;
@@ -1058,7 +1132,9 @@ QCalendarWidget QAbstractItemView:disabled {
 	color: #818181
 }
 QWidget#frameObfuscation QLabel#ObfuscationTitle {
+	font-size: 15px;
 	qproperty-alignment: 'AlignVCenter | AlignLeft';
 	min-width: 160px;
-	background-color: transparent
+	background-color: transparent;
+	font-weight: 700
 }
