--- a/src/qt/forms/overviewpage.ui
+++ b/src/qt/forms/overviewpage.ui
@@ -59,9 +59,9 @@
               <property name="font">
                <font>
                 <pointsize>8</pointsize>
-                <weight>75</weight>
+                <weight>50</weight>
                 <italic>false</italic>
-                <bold>true</bold>
+                <bold>false</bold>
                 <underline>false</underline>
                 <stylestrategy>PreferDefault</stylestrategy>
                </font>
