--- a/src/qt/res/css/default.css
+++ b/src/qt/res/css/default.css
@@ -331,7 +331,8 @@ QHeaderView::section:last {
 }
 QDialog#MultiSendDialog QScrollArea{
 	border: 1px solid #0;
-	background-color: #ffffff	
+	background-color: #ffffff
+	color: #ffffff	
 }
 QTableView::item {
 	background-color: #fcfcfc;
