--- a/src/qt/res/css/default.css
+++ b/src/qt/res/css/default.css
@@ -7,7 +7,7 @@ WalletFrame {
 QStatusBar {
 	background-color: #ffffff
 }
-.QFrame {
+QFrame {
 	background-color: transparent;
 	border: 0px solid #fff
 }
@@ -31,35 +31,40 @@ QMenu::item:selected {
 	color: #333
 }
 QToolBar {
-	background-color: #4c75a1;
+	background-color: #1565c0;
 	border: 0px solid #333;
 	padding: 1;
 	margin: 0;
-	width: 70px
+	width: 90px
 }
 QToolBar > QToolButton {
-	background-color: #4c75a1;
+	alignment: left;
+	background-color: #1565c0;
 	border: 0px solid #333;
-	selection-background-color: transparent;
-	padding: 0em 2em;
-	min-height: 3em;
-	padding: 0em 3.566668em;
-	font-size: 12px;
+	border-left: 0px;
+	border-right: 0px;
+	border-top: 0px;
+	min-height:3em;
+	padding-top:10px;
+	padding-bottom:10px;
+	font-size: 11px;
+	width: 120px;
+	height: 60px;
 	color: #fff
 }
 QToolBar > QToolButton:checked {
-	background-color: #324e6b;
+	background-color: #003c8f;
 	color: #fff
 }
 QToolBar > QToolButton:hover {
-	background-color: #324e6b;
+	background-color: #5e92f3;
 	color: #fff
 }
 QToolBar > QToolButton#ToolbarSpacer:hover:!selected {
-	background-color: #324e6b;
+	background-color: #5e92f3;
 }
 QToolBar > QToolButton:pressed {
-	background-color: #324e6b;
+	background-color: #003c8f;
 	color: #fff
 }
 QMessageBox {
@@ -73,7 +78,7 @@ QProgressBar {
 	padding-right: 0px
 }
 QProgressBar::chunk {
-	background-color: #5787bb;
+	background-color: #1565c0;
 	width: 20px
 }
 QLabel#progressBarLabel {
@@ -94,10 +99,10 @@ QTabBar {
 	color: #333
 }
 QTabBar::tab:hover:!selected {
-	background-color: #dedbe5
+	background-color: #5e92f3
 }
 QWidget {
-	selection-background-color: #5787bb;
+	selection-background-color: #1565c0;
 	selection-color: #fff;
 	outline: 0;
 }
@@ -106,58 +111,60 @@ QGroupBox {
 	color: #333
 }
 QToolTip {
-	background-color: #5787bb;
-	color: #333
+	background-color: #f2f2f2;
+	color: #333;
+	border: 1px solid #333;
 }
 QLabel {
 	font-size: 12px;
 	color: #333333
 }
-.QRadioButton {
+QRadioButton {
 	color: #333333
 }
-.QCheckBox {
+QCheckBox {
 	color: #333333
 }
-.QCheckBox:hover {} .QValidatedLineEdit,
-.QLineEdit,
-.QTextEdit {
+QCheckBox:hover {} .QValidatedLineEdit,
+QLineEdit,
+QTextEdit {
 	font-size: 12px;
 	min-height: 25px;
 	outline: 0;
+	border-radius: 10px;
 	padding: 3px;
 	border: 0px;
 	color: #333;
 	background-color: #f2f2f2
 }
-.QValidatedLineEdit:!focus {
-	color: #5787bb;
+QValidatedLineEdit:!focus {
+	color: #1565c0;
 	background-color: #e7e7e7
 }
-.QLineEdit:!focus {
-	color: #5787bb;
+QLineEdit:!focus {
+	color: #1565c0;
 	background-color: #e7e7e7
 }
-.QTextEdit:!focus {
-	color: #5787bb;
+QTextEdit:!focus {
+	color: #1565c0;
 	background-color: #e7e7e7
 }
-.QValidatedLineEdit:disabled,
-.QLineEdit:disabled,
-.QTextEdit:disabled {
-	color: #5787bb;
+QValidatedLineEdit:disabled,
+QLineEdit:disabled,
+QTextEdit:disabled {
+	color: #1565c0;
 	background-color: #f2f2f2
 }
-.QPlainTextEdit {
+QPlainTextEdit {
 	background-color: #f2f2f2
 }
 QPushButton {
-	background-color: #5787bb;
+	background-color: transparent;
 	border-width: 1px;
-	border-style: outset;
-	border-color: #5787bb;
-	border-radius: 2px;
-	color: #ffffff;
+	border-style: solid;
+	border-color: #1565c0;
+	border-radius: 4px;
+	color: #1565c0;
 	font-size: 12px;
 	font-weight: 700;
 	padding-left: 25px;
@@ -168,12 +175,12 @@ QPushButton {
 	margin: 2px
 }
 QPushButton:hover {
-	background-color: #b3cce6
+	background-color: #e4e4e4
 }
 QPushButton:focus {} QPushButton:pressed {
-	background-color: #5787bb;
+	background-color: #1565c0;
 	border: 1px solid #000000;
-	background-color: #b3cce6
+	background-color: #5e92f3
 }
 QLabel#labelEncryptionIcon,
 QLabel#labelConnectionsIcon,
@@ -187,13 +194,14 @@ QPushButton#labelAutoMintIcon{
 	margin: 0px
 }
 QSpinBox::up-button:hover {
-	background-color: #324e6b
+	background-color: #5e92f3
 }
 QSpinBox::down-button:hover {
-	background-color: #f2f2f2
+	background-color: #5e92f3
 }
 QComboBox {
-	border: 1px solid #5787bb;
+	border: 1px solid #1565c0;
+	border-radius: 10px;
 	padding: 3px 5px 3px 5px;
 	background: #fcfcfc;
 	min-height: 25px;
@@ -203,7 +211,7 @@ QComboBox:checked {
 	background: #f2f2f2
 }
 QComboBox:editable {
-	background: #5787bb;
+	background: #1565c0;
 	color: #616161;
 	border: 0px solid transparent
 }
@@ -241,6 +249,7 @@ QComboBox::indicator {
 	selection-color: transparent
 }
 QAbstractSpinBox {
+	border-radius: 10px;
 	padding: 3px 5px 3px 5px;
 	background: #fcfcfc;
 	font-size: 12px;
@@ -252,7 +261,7 @@ QAbstractSpinBox {
 	background-color: #f2f2f2
 }
 QAbstractSpinBox:!focus {
-	color: #5787bb;
+	color: #1565c0;
 	background-color: #e7e7e7
 }
 QAbstractSpinBox::up-button {
@@ -282,6 +291,7 @@ QAbstractSpinBox::down-arrow {
 QValueComboBox {
 	padding: 3px 5px 3px 5px;
 	background: #fcfcfc;
+	border-radius: 10px;
 	font-size: 12px;
 	min-height: 25px;
 	outline: 0;
@@ -291,7 +301,7 @@ QValueComboBox {
 	background-color: #f2f2f2
 }
 QValueComboBox:!focus {
-	color: #5787bb;
+	color: #1565c0;
 	background-color: #e7e7e7
 }
 QHeaderView {
@@ -300,7 +310,7 @@ QHeaderView {
 }
 QHeaderView::section {
 	qproperty-alignment: center;
-	background-color: #5787bb;
+	background-color: #1565c0;
 	color: #fff;
 	min-height: 25px;
 	font-weight: 700;
@@ -331,13 +341,14 @@ QHeaderView::section:last {
 }
 QDialog#MultiSendDialog QScrollArea{
 	border: 1px solid #0;
+	background-color: #ffffff	
 }
 QTableView::item {
 	background-color: #fcfcfc;
 	font-size: 12px
 }
 QTableView::item:selected {
-	background-color: #5787bb;
+	background-color: #1565c0;
 	color: #fff
 }
 QTableWidget {
@@ -355,88 +366,6 @@ QTreeWidget {
 	background-color: #fcfcfc;
 	alternate-background-color: #f2f2f2;
 	color: #333
-}
-QScrollBar {} QScrollBar:vertical {
-	border: 0;
-	background: #5787bb;
-	width: 18px;
-	margin: 18px 0px 18px 0px
-}
-QScrollBar:horizontal {
-	border: 0;
-	background: #5787bb;
-	height: 18px;
-	margin: 0px 18px 0px 18px
-}
-QScrollBar::handle:vertical {
-	background: #5787bb;
-	min-height: 10px
-}
-QScrollBar::handle:vertical:pressed {
-	background: #b3cce6;
-	min-height: 10px
-}
-QScrollBar::handle:horizontal {
-	background: #5787bb;
-	min-width: 10px
-}
-QScrollBar::handle:horizontal:pressed {
-	background: #b3cce6;
-	min-width: 10px
-}
-QScrollBar::add-page,
-QScrollBar::sub-page {
-	background: #fafefd
-}
-QScrollBar::add-line:vertical,
-QScrollBar::sub-line:vertical,
-QScrollBar::add-line:horizontal,
-QScrollBar::sub-line:horizontal {
-	background-color: #fafefd;
-	border: 1px solid #f2f0f0;
-	width: 16px;
-	height: 16px
-}
-QScrollBar::add-line:vertical:pressed,
-QScrollBar::sub-line:vertical:pressed,
-QScrollBar::add-line:horizontal:pressed,
-QScrollBar::sub-line:horizontal:pressed {
-	background-color: #e0e0e0
-}
-QScrollBar::sub-line:vertical {
-	subcontrol-position: top;
-	subcontrol-origin: margin
-}
-QScrollBar::add-line:vertical {
-	subcontrol-position: bottom;
-	subcontrol-origin: margin
-}
-QScrollBar::sub-line:horizontal {
-	subcontrol-position: left;
-	subcontrol-origin: margin
-}
-QScrollBar::add-line:horizontal {
-	subcontrol-position: right;
-	subcontrol-origin: margin
-}
-QScrollBar:up-arrow,
-QScrollBar:down-arrow,
-QScrollBar:left-arrow,
-QScrollBar:right-arrow {
-	width: 10px;
-	height: 10px
-}
-QScrollBar:up-arrow {
-	background-image: url(':/images/upArrow_small')
-}
-QScrollBar:down-arrow {
-	background-image: url(':/images/downArrow_small')
-}
-QScrollBar:left-arrow {
-	background-image: url(':/images/leftArrow_small')
-}
-QScrollBar:right-arrow {
-	background-image: url(':/images/rightArrow_small')
 }
 QSlider::groove:horizontal {
 	border: 1px solid #bbb;
@@ -506,6 +435,7 @@ QDialog .QTabWidget .QWidget {
 	color: #333
 }
 QDialog .QTabWidget .QWidget QAbstractSpinBox {
+	border-radius: 10px;
 	min-height: 15px
 }
 QDialog .QTabWidget .QWidget QAbstractSpinBox::down-button {
@@ -515,6 +445,7 @@ QDialog .QTabWidget .QWidget QAbstractSpinBox::up-button {
 	width: 15px
 }
 QDialog .QTabWidget .QWidget QComboBox {
+	border-radius: 10px;
 	min-height: 15px
 }
 QDialog#OpenURIDialog QLabel#label {
@@ -568,7 +499,7 @@ QFrame#frameObfuscation QProgressBar#obfuscationProgress {
 	padding-right: 0px
 }
 QFrame#frameObfuscation QProgressBar#obfuscationProgress::chunk {
-	background-color: #5787bb;
+	background-color: #1565c0;
 	width: 1px
 }
 QFrame#frameObfuscation QLabel#progressBarLabel {
@@ -581,6 +512,7 @@ QDialog#AskPassphraseDialog QLabel#passLabel3 {
 }
 QDialog#OptionsDialog QValueComboBox,
 QDialog#OptionsDialog QSpinBox {
+	border-radius: 10px;
 	margin-top: 5px;
 	margin-bottom: 5px
 }
@@ -624,7 +556,7 @@ QDialog#RPCConsole QWidget#tab_info QLabel#label_10 {
 	min-width: 180px
 }
 QDialog#RPCConsole QWidget#tab_peers QLabel#peerHeading {
-	color: #5787bb
+	color: #1565c0
 }
 QDialog#RPCConsole QTableView#peerWidget::item {
 	color: #333
@@ -646,17 +578,13 @@ QDialog#RPCConsole QPushButton#clearButton {
 	padding-right: 10px
 }
 QDialog#RPCConsole .QGroupBox #line {
-	background-color: #5787bb
+	background-color: #1565c0
 }
 QDialog#RPCConsole .QGroupBox #line_2 {
 	background: #fff
 }
 QDialog#HelpMessageDialog QScrollArea * {
 	background-color: #fff
-}
-QDialog#HelpMessageDialog QScrollBar:vertical,
-QDialog#HelpMessageDialog QScrollBar:horizontal {
-	border: 0
 }
 QDialog#AboutDialog QLabel#label,
 QDialog#AboutDialog QLabel#copyrightLabel,
@@ -673,7 +601,7 @@ QDialog#EditAddressDialog QLabel {
 	padding-right: 5px
 }
 QFrame[frameShape="4"] {
-	border: 1px solid #4c75a1
+	border: 1px solid #1565c0
 }
 QLabel#labelOverviewHeaderLeft {
 	font-weight: 700;
@@ -713,163 +641,127 @@ QWidget .QFrame#frame_RecentTransactions {
 	min-width: 400px;
 	background-color: #ffffff
 }
-QWidget .QFrame#frame_Balances > .QLabel {
-	padding-bottom: 10px;
-}
 QWidget .QFrame#frame_Balances .QLabel#BalanceTitle {
-	qproperty-alignment: 'AlignVCenter | AlignLeft';
 	min-width: 160px;
 	background-color: transparent;
-	font-size: 15px;
+	text-transform: uppercase;
+	font-weight: 700;
+	font-size: 12px;
+}
+QWidget .QFrame#frameObfuscation .QLabel#ObfuscationTitle {
+	font-size: 12px;
+	min-width: 160px;
+	text-transform: uppercase;
+	background-color: transparent;
+	font-weight: 700
 }
 QWidget .QFrame#frame_Balances .QLabel#labelWalletStatus {
-	qproperty-alignment: 'AlignVCenter | AlignLeft';
-	margin-left: 3px
+	margin-left: 5px
+}
+QWidget .QFrame#frameObfuscation .QLabel#labelObfuscationSyncStatus {
+	margin-left: 5px
 }
 QWidget .QFrame#frame_Balances .QLabel#labelSpendable {
-	qproperty-alignment: 'AlignVCenter | AlignLeft';
 	font-size: 12px;
 	margin-left: 18px
 }
 QWidget .QFrame#frame_Balances .QLabel#labelWatchonly {
-	qproperty-alignment: 'AlignVCenter | AlignLeft';
 	font-size: 12px;
 	margin-left: 16px
 }
 QWidget .QFrame#frame_Balances .QLabel#labelBalanceText {
-	qproperty-alignment: 'AlignVCenter | AlignLeft';
-	margin-right: 5px;
-	padding-right: 5px;
 	font-size: 15px
 }
 QWidget .QFrame#frame_Balances .QLabel#labelBalance {
-	qproperty-alignment: 'AlignVCenter | AlignLeft';
-	font-size: 12px;
-	font-weight: 700;
-	margin-left: 0px
+	font-size: 25px;
+	font-weight: 400;
 }
 QWidget .QFrame#frame_Balances .QLabel#labelWatchAvailable {
-	qproperty-alignment: 'AlignVCenter | AlignLeft';
-	font-size: 12px;
-	margin-left: 16px
+	font-size: 25px;
 }
 QWidget .QFrame#frame_Balances .QLabel#labelPendingText {
-	qproperty-alignment: 'AlignVCenter | AlignLeft';
-	margin-right: 5px;
-	padding-right: 5px;
 	font-size: 15px
 }
 QWidget .QFrame#frame_Balances .QLabel#labelUnconfirmed {
-	qproperty-alignment: 'AlignVCenter | AlignLeft';
-	font-size: 12px;
-	font-weight: 700;
-	margin-left: 0px
+	font-size: 25px;
+	font-weight: 400;
 }
 QWidget .QFrame#frame_Balances .QLabel#labelWatchPending {
-	qproperty-alignment: 'AlignVCenter | AlignLeft';
-	font-size: 12px;
-	margin-left: 16px
+	font-size: 25px;
 }
 QWidget .QFrame#frame_Balances .QLabel#labelImmatureText {
-	qproperty-alignment: 'AlignVCenter | AlignLeft';
-	margin-right: 5px;
-	padding-right: 5px;
 	font-size: 15px
 }
 QWidget .QFrame#frame_Balances .QLabel#labelImmature {
-	qproperty-alignment: 'AlignVCenter | AlignLeft';
-	font-size: 12px;
-	font-weight: 700;
-	margin-left: 0px
+	font-size: 25px;
+	font-weight: 400;
 }
 QWidget .QFrame#frame_Balances .QLabel#labelWatchImmature {
-	qproperty-alignment: 'AlignVCenter | AlignLeft';
-	font-size: 12px;
-	margin-left: 16px
+	font-size: 25px;
 }
 QWidget .QFrame#frame_Balances .QLabel#labelTotalText {
-	qproperty-alignment: 'AlignVCenter | AlignLeft';
-	margin-right: 5px;
-	padding-right: 5px;
 	font-size: 15px
 }
 QWidget .QFrame#frame_Balances .QLabel#labelTotal {
-	qproperty-alignment: 'AlignVCenter | AlignLeft';
-	font-size: 12px;
-	font-weight: 700;
-	margin-left: 0px
+	font-size: 25px;
+	font-weight: 400;
 }
 QWidget .QFrame#frame_Balances .QLabel#labelWatchTotal {
-	qproperty-alignment: 'AlignVCenter | AlignLeft';
-	font-size: 12px;
-	margin-left: 16px
+	font-size: 25px;
 }
 QWidget .QFrame#frame_CombinedBalances .QLabel#BalanceTitlez {
-	qproperty-alignment: 'AlignVCenter | AlignLeft';
 	min-width: 160px;
 	background-color: transparent;
-	color: #5787bb;
+	text-transform: uppercase;
+	color: #1565c0;
 	font-weight: 700;
-	font-size: 15px;
-	margin-right: 5px;
-	padding-right: 5px
+	font-size: 12px;
 }
 QWidget .QFrame#frame_CombinedBalances .QLabel#labelBalanceTextz {
-	qproperty-alignment: 'AlignVCenter | AlignLeft';
 	min-width: 160px;
-	color: #324e6b;
-	margin-right: 5px;
-	padding-right: 5px;
+	color: #003c8f;
 	font-weight: 700;
 	font-size: 12px
 }
 QWidget .QFrame#frame_CombinedBalances .QLabel#labelBalancez {
-	qproperty-alignment: 'AlignVCenter | AlignLeft';
 	font-size: 26px;
 	font-weight: 400;
-	color: #324e6b
+	color: #003c8f
 }
 QWidget .QFrame#frame_CombinedBalances .QLabel#labelTotalTextz {
-	qproperty-alignment: 'AlignVCenter | AlignLeft';
 	min-width: 160px;
-	color: #324e6b;
-	margin-right: 5px;
-	padding-right: 5px;
+	color: #003c8f;
 	font-weight: 700;
 	font-size: 12px
 }
 QWidget .QFrame#frame_CombinedBalances .QLabel#labelTotalz {
-	qproperty-alignment: 'AlignVCenter | AlignLeft';
 	font-size: 26px;
 	font-weight: 400;
-	color: #324e6b
+	color: #003c8f
 }
 QWidget .QFrame#frame_RecentTransactions {
 	min-width: 410px;
 	min-height: 100px;
-	margin-left: 0;
-	margin-top: 0
 }
 QWidget .QFrame#frame_RecentTransactions .QLabel#RecentTitle {
-	qproperty-alignment: 'AlignVCenter | AlignLeft';
 	min-width: 180px;
 	background-color: transparent;
+	text-transform: uppercase;
 	font-weight: 700;
-	font-size: 15px;
-	margin-right: 5px;
-	padding-right: 5px
+	font-size: 12px;
 }
 QWidget .QFrame#frame_RecentTransactions .QLabel#labelTransactionsStatus {
-	qproperty-alignment: 'AlignVCenter | AlignLeft';
-	margin-left: 3px
+	margin-left: 5px
 }
 QWidget .QFrame#frame_RecentTransactions QListView {
+	background-color: transparent;
 	font-weight: 400;
 	font-size: 12px;
 	max-width: 369px;
 	margin-top: 12px;
 	margin-left: 0px;
 }
+
 QDialog#SendCoinsDialog {
 	background-color: #fff
 }
@@ -883,7 +775,10 @@ QDialog#SendCoinsDialog .QFrame#frame_Send {
 	background-color: #ffffff;
 	margin-bottom: 6px
 }
-QDialog#SendCoinsDialog .QFrame#frameCoinControl {} QDialog#SendCoinsDialog .QFrame#frameCoinControl > .QLabel {
+QDialog#SendCoinsDialog .QFrame#frameCoinControl {
+
+} 
+QDialog#SendCoinsDialog .QFrame#frameCoinControl > .QLabel {
 	font-weight: 400
 }
 QDialog#SendCoinsDialog .QFrame#frameCoinControl .QPushButton#pushButtonCoinControl {
@@ -895,13 +790,16 @@ QDialog#SendCoinsDialog .QFrame#frameCoinControl .QLabel#labelCoinControlFeature
 	qproperty-alignment: 'AlignVCenter | AlignLeft';
 	min-width: 160px;
 	background-color: transparent;
-	color: #5787bb;
+	text-transform: uppercase;
 	font-weight: 700;
-	font-size: 14px;
+	font-size: 12px;
 	margin-right: 5px;
 	padding-right: 5px
 }
-QDialog#SendCoinsDialog .QFrame#frameCoinControl .QWidget#widgetCoinControl {} QDialog#SendCoinsDialog .QFrame#frameCoinControl .QWidget#widgetCoinControl > .QLabel {
+QDialog#SendCoinsDialog .QFrame#frameCoinControl .QWidget#widgetCoinControl {
+
+	} 
+QDialog#SendCoinsDialog .QFrame#frameCoinControl .QWidget#widgetCoinControl > .QLabel {
 	padding: 2px
 }
 QDialog#SendCoinsDialog .QFrame#frameCoinControl .QLabel#labelCoinControlChangeLabel {
@@ -946,6 +844,7 @@ QStackedWidget#SendCoinsEntry QToolButton {
 	background-color: transparent;
 	border: 0
 }
+
 QDialog#CoinControlDialog .QLabel#labelCoinControlQuantityText {
 	min-height: 30px;
 	padding-left: 15px
@@ -1013,7 +912,7 @@ QDialog#CoinControlDialog .CoinControlTreeWidget#treeWidget {
 	border: 1px solid #333
 }
 QDialog#CoinControlDialog .CoinControlTreeWidget#treeWidget::item {} QDialog#CoinControlDialog .CoinControlTreeWidget#treeWidget::item:selected {
-	background-color: #5787bb;
+	background-color: #1565c0;
 	color: #fff
 }
 QDialog#CoinControlDialog .CoinControlTreeWidget#treeWidget::item:checked {
@@ -1051,6 +950,12 @@ QWidget#ReceiveCoinsDialog .QFrame#frame2 > .QLabel {
 	padding-right: 5px
 }
 QWidget#ReceiveCoinsDialog .QFrame#frame QPushButton {
+	background-color: transparent;
+	border-width: 1px;
+	border-style: solid;
+	border-color: #1565c0;
+	border-radius: 4px;
+	color: #1565c0;
 	padding-left: 10px;
 	padding-right: 10px
 }
@@ -1065,7 +970,7 @@ QWidget#ReceiveCoinsDialog .QFrame#frame2 QPushButton:pressed {
 	border: 1px solid #9e9e9e
 }
 QWidget#ReceiveCoinsDialog .QFrame#frame .QLabel#label_6 {
-	color: #5787bb;
+	color: #1565c0;
 	font-weight: 700;
 	font-size: 14px
 }
@@ -1079,6 +984,7 @@ TransactionView QLineEdit {
 	text-align: center
 }
 TransactionView QComboBox {
+	border-radius: 10px;
 	margin-bottom: 1px;
 	margin-right: 1px
 }
@@ -1093,7 +999,7 @@ QDialog#TransactionDescDialog QTextEdit {
 	border: 1px solid #d7d7d7
 }
 QWidget#PrivacyDialog .QFrame[frameShape="4"] {
-	border: 1px solid #324e6b
+	border: 1px solid #003c8f
 }
 QWidget#PrivacyDialog .QFrame#frame_Content {
 	background-color: #f8f6f6
@@ -1116,11 +1022,11 @@ QCalendarView {
 	border: 1px solid #333
 }
 QCalendarWidget QWidget#qt_calendar_navigationbar {
-	background-color: #5787bb;
+	background-color: #1565c0;
 	font-weight: 700
 }
 QCalendarWidget QAbstractItemView {
-	alternate-background-color: #dedbe5;
+	alternate-background-color: #5e92f3;
 	background-color: #fff
 }
 QCalendarWidget QAbstractItemView:enabled {
@@ -1128,11 +1034,4 @@ QCalendarWidget QAbstractItemView:enabled {
 }
 QCalendarWidget QAbstractItemView:disabled {
 	color: #818181
-}
-QWidget#frameObfuscation QLabel#ObfuscationTitle {
-	font-size: 15px;
-	qproperty-alignment: 'AlignVCenter | AlignLeft';
-	min-width: 160px;
-	background-color: transparent;
-	font-weight: 700
 }
